--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
 
       <tr>
-      <td><img src="https://pbs.twimg.com/profile_images/917426035305603072/1VZkZfUR_400x400.jpg" alt="Chris Profile Picture"></td>
+      <td><img src="C:\Users\bc58b\Downloads\Udemy\Web Development\HTML - Personal Site\profile.jpg" alt="Chris Profile Picture"></td>
       <td><h1>Christopher Begley</h1>
       <p><em><strong>Wannabe<strong></em><p>
       <p>Nothing much to say but just trying to get along and do the best that I can</p>
